# camel-canine-middleware

./: .gitignore  CMakeLists.txt  README.md  description_communication.txt  main.cpp
include/: CommandLists.hpp  DataProcessing.hpp  Gamepad.h  JoystickCommand.hpp  Setup.hpp  TCPCommunication.hpp  UDPCommunication.hpp
include/console/: ConsoleType.hpp  DataProcessing.hpp  GamepadDescription.hpp  JoystickCommand.hpp
lib/: CMakeLists.txt
lib/SharedMemory/: CMakeLists.txt  EnumClasses.hpp  JoystickInfo.hpp  SharedMemory.cpp  SharedMemory.hpp  custom_struct.hpp
lib/threadGenerator/: CMakeLists.txt  threadGenerator.cpp  threadGenerator.hpp
rsc/urdf/canine/urdf/: canine_RILAB.urdf
rsc/urdf/canineV5/urdf/: canineV5_2.urdf
src/: CommandLists.cpp  Gamepad.cpp  JoystickCommand.cpp  RobotController.cpp  TCPCommunication.cpp  UDPCommunication.cpp
